--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.ulling.firebasetest">
 
-  <uses-sdk
-      android:minSdkVersion="16"
-      android:targetSdkVersion="19"/>
+  <!--<uses-sdk-->
+      <!--android:minSdkVersion="16"-->
+      <!--android:targetSdkVersion="19"/>-->
 
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
