--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,10 +9,10 @@ android {
         }
         debug {
 //            storeFile file('/Users/KILHO/Dropbox/iullim/ullim_appstore/Keystore/ullim_debugkey.keystore')
-            keyAlias 'androiddebugkey'
-            keyPassword 'android'
-            storeFile file('/Users/KILHO/debug.keystore')
-            storePassword 'android'
+//            keyAlias 'androiddebugkey'
+//            keyPassword 'android'
+//            storeFile file('/Users/KILHO/debug.keystore')
+//            storePassword 'android'
 
 //            def Properties props = new Properties()
 //            def propFile = new File('gradle.properties')
@@ -26,14 +26,14 @@ android {
 //            }
         }
     }
-    compileSdkVersion 25
-    buildToolsVersion '25.0.0'
+    compileSdkVersion 26
+//    buildToolsVersion '25.0.0'
     defaultConfig {
         applicationId "com.ulling.firebasetest"
-        minSdkVersion 16
-        targetSdkVersion 25
+        minSdkVersion 18
+        targetSdkVersion 26
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
         multiDexEnabled true
     }
     buildTypes {
@@ -47,22 +47,22 @@ android {
 }
 
 dependencies {
-//    compile 'com.github.kiruya80:UllingCoreLib:0.0.12'
-    compile 'com.android.support:appcompat-v7:25.0.0'
-    compile 'com.android.support:design:25.0.0'
-    compile 'com.github.bumptech.glide:glide:3.6.1'
+//    implementation 'com.github.kiruya80:UllingCoreLib:0.0.12'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.github.bumptech.glide:glide:3.6.1'
     //    compile 'de.hdodenhof:circleimageview:1.3.0'
     //    compile 'com.github.jitpack-io:android-jitpack-library-example:1.5'
     // Google
-    compile 'com.google.android.gms:play-services-auth:9.8.0'
+    implementation 'com.google.android.gms:play-services-auth:9.8.0'
     // Firebase
-    compile 'com.google.firebase:firebase-database:9.8.0'
-    compile 'com.google.firebase:firebase-auth:9.8.0'
-    compile 'com.google.firebase:firebase-config:9.8.0'
-    compile 'com.google.firebase:firebase-messaging:9.8.0'
-    compile 'com.google.firebase:firebase-crash:9.8.0'
+    implementation 'com.google.firebase:firebase-database:9.8.0'
+    implementation 'com.google.firebase:firebase-auth:9.8.0'
+    implementation 'com.google.firebase:firebase-config:9.8.0'
+    implementation 'com.google.firebase:firebase-messaging:9.8.0'
+    implementation 'com.google.firebase:firebase-crash:9.8.0'
     // Firebase UI
-    compile 'com.firebaseui:firebase-ui-database:0.4.0'
+    implementation 'com.firebaseui:firebase-ui-database:0.4.0'
     //    compile 'com.google.android.gms:play-services-ads:9.8.0'
     //    compile 'com.google.android.gms:play-services-appinvite:9.8.0'
 
@@ -75,13 +75,13 @@ dependencies {
     // Used in FacebookLoginActivity. This is only compiled into the minSdkJellybean variant of this
     // app. You can build a 'minSdkGingerbread' variant to test on devices with 9 <= SDK <= 15.
 //    minSdkJellybeanCompile 'com.facebook.android:facebook-android-sdk:4.9.0'
-    compile 'com.facebook.android:facebook-android-sdk:4.17.0'
+    implementation 'com.facebook.android:facebook-android-sdk:4.17.0'
 
     // Twitter Android SDK (only required for Twitter Login)
-    compile('com.twitter.sdk.android:twitter-core:1.7.0@aar') {
+    implementation('com.twitter.sdk.android:twitter-core:1.7.0@aar') {
         transitive = true;
     }
-    compile('com.twitter.sdk.android:twitter:1.7.0@aar') {
+    implementation('com.twitter.sdk.android:twitter:1.7.0@aar') {
         transitive = true;
     }
 }
