--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,9 @@ android {
     packagingOptions {
         exclude 'META-INF/DEPENDENCIES'
     }
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -97,6 +100,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-scalars:2.4.0'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
 // ADD THIS AT THE BOTTOM
 apply plugin: 'com.google.gms.google-services'
