--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,6 +104,8 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
 
     implementation 'org.jsoup:jsoup:1.11.3'
+
+    implementation 'com.google.android.gms:play-services:12.0.1'
 }
 // ADD THIS AT THE BOTTOM
 apply plugin: 'com.google.gms.google-services'
